--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,12 +17,15 @@ jobs:
       - name: Build
         run: make -j
       - name: Smoke run (5s)
-        run: |
-          timeout 5s qemu-system-aarch64 -machine virt,gic-version=3 -cpu cortex-a72 \
-            -smp 1 -m 512 -nographic -serial mon:stdio \
-            -kernel build/kernel.elf || true
+        run: scripts/smoke_run.sh
       - name: Upload ELF
         uses: actions/upload-artifact@v4
         with:
           name: kernel-elf
           path: build/kernel.elf
+      - name: Upload QEMU smoke log
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: qemu-smoke-log
+          path: build/qemu-smoke.log
