--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,12 @@ jobs:
         with:
           name: qemu-smoke-log
           path: build/qemu-smoke.log
+      - name: Upload QEMU trace
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: qemu-trace
+          path: build/qemu-trace.log
       - name: Upload QEMU debug log
         if: always()
         uses: actions/upload-artifact@v4
